logs/goblet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/goblet'...
Compiling './lib/python3.5/site-packages/goblet/monkey.py'...
***   File "./lib/python3.5/site-packages/goblet/monkey.py", line 255
    return (mode & 0160000) == 0160000
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/goblet/themes'...
Listing './lib/python3.5/site-packages/goblet/themes/default'...
Listing './lib/python3.5/site-packages/goblet/themes/default/static'...
Listing './lib/python3.5/site-packages/goblet/themes/default/static/chosen'...
Listing './lib/python3.5/site-packages/goblet/themes/default/templates'...
Compiling './lib/python3.5/site-packages/goblet/views.py'...
***   File "./lib/python3.5/site-packages/goblet/views.py", line 73
    except NotFound, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/goblet-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
